Fixed navbar bug and added nav visibility

--- a/src/app/navigation-menu/navigation-menu.component.scss
+++ b/src/app/navigation-menu/navigation-menu.component.scss
@@ -33,10 +33,10 @@
     font-weight: bold;
   }
 
-  .navbar {
-    overflow:hidden;
-    transition:transform 1s ease-out;
-    height:auto;
-    transform:scaleY(1);  
-    transform-origin:top;
+  .navbar-header {
+    text-decoration-color: #3B6AB4 !important;
+  }
+
+  .sidenav-container {
+    position: fixed !important;
   }
